--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "types": "dist/index",
   "scripts": {
     "test": "jest",
-    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "start": "node dist/server.js",
     "build": "tsc --watch",
-    "dev": "nodemon src/index.ts",
     "format": "prettier --write .",
     "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
   },
